<resources>
    <string name="app_name">Inventory App</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>


    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>

    <string name="nav_search_text">Search Product</string>
    <string name="nav_add_text">Add Product</string>
    <string name="nav_remove_text">Remove Product</string>
    <string name="nav_get_text">List of Products</string>
    <string name="nav_edit_price_text">Modify Product Price</string>
    <string name="nav_increment_quantity_text">Increment Product Quantity</string>
    <string name="nav_decrement_quantity_text">Decrement Product Quantity</string>
    <string name="sale">Sale</string>
    <string name="quantity">Quantity</string>
    <string name="priceTitle">Price</string>
    <string name="name">Name</string>
    <string name="product_name">Product Name</string>
    <string name="add_image">Add Image</string>
    <string name="hint_price">Product Price</string>
    <string name="hint_name">Product Name</string>
    <string name="hint_quantity">Product Quantity</string>
    <string name="hint_email">Product Email</string>
    <string name="hint_new_price">New Product Price</string>
    <string name="hint_increment">Quantity you want to increment</string>
    <string name="order_more">Order More</string>
    <string name="contact">Contact</string>
    <string name="apply_change">Apply Change!</string>

</resources>
