<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/product_name"
            android:id="@+id/textProductNameValue"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/priceTitle"
            android:id="@+id/textPrice"
            android:layout_below="@+id/textProductNameValue"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/priceTitle"
            android:id="@+id/textPriceValue"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/textPrice"
            android:layout_alignLeft="@+id/textPrice"
            android:layout_alignStart="@+id/textPrice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quantity"
            android:id="@+id/textQuantity"
            android:layout_alignTop="@+id/textPrice"
            android:layout_toRightOf="@+id/btnEditPrice"
            android:layout_toEndOf="@+id/btnEditPrice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/quantity"
            android:id="@+id/textQuantityValue"
            android:layout_alignTop="@+id/textPriceValue"
            android:layout_alignLeft="@+id/textQuantity"
            android:layout_alignStart="@+id/textQuantity" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageProduct"
            android:layout_below="@+id/textPriceValue"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:onClick="contactProductDistributor"
            android:id="@+id/btnContact"
            android:layout_below="@+id/imageProduct"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_edit_price_text"
            android:id="@+id/btnEditPrice"
            android:onClick="modifyProductPrice"
            android:layout_below="@+id/btnContact"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_more"
            android:onClick="modifyProductQuantity"
            android:id="@+id/btnIncreaseQuantity"
            android:layout_below="@+id/btnEditPrice"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_remove_text"
            android:id="@+id/btnRemoveProduct"
            android:onClick="removeProduct"
            android:layout_below="@+id/btnIncreaseQuantity"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</ScrollView>